fixed background not showing
moved background property to inline css

--- a/Report/css/registration.css
+++ b/Report/css/registration.css
@@ -5,7 +5,6 @@
 }
 
 body{
-    background: url('pics/formBG.jpeg');
 	background-repeat: no-repeat;
     background-size: cover;
     color: #fff;
